--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : kounoike
+      short_name : kounoike-github
     livefyre :
       site_id : 123
     intensedebate :
